unpackaged/objects/ERD__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lookup</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>ERDs</relationshipLabel>
        <relationshipName>ERDs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BrainEngine_Artifact__c</fullName>
        <label>Master</label>
        <referenceTo>BrainEngine_Artifact__c</referenceTo>
        <relationshipLabel>ERDs</relationshipLabel>
        <relationshipName>ERDs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BrainEngine_BugA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>sssssss</description>
        <label>BrainEngine BugA</label>
        <referenceTo>BE_Bug__c</referenceTo>
        <relationshipName>BrainEngine_Bug</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Checkbox1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DateTime__c</fullName>
        <label>DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LookupContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>LookupContactB</description>
        <inlineHelpText>LookupContactC</inlineHelpText>
        <label>LookupContact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>LookupContactA Label</relationshipLabel>
        <relationshipName>LookupContactA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number__c</fullName>
        <label>Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Percent__c</fullName>
        <label>Percent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Picklist2__c</fullName>
        <label>Picklist2</label>
        <picklist>
            <picklistValues>
                <fullName>a</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>b</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>c</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>d</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>e</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>f</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Picklist__c</fullName>
        <label>Picklist</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TextChange4__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>tttttttttttttttttttttttttttt</inlineHelpText>
        <label>Text Change4</label>
        <length>49</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text_Area_Long__c</fullName>
        <label>Text Area (Long)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Text_Area_Rich__c</fullName>
        <label>Text Area (Rich)</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Text_Area__c</fullName>
        <label>Text Area</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>auto__c</fullName>
        <displayFormat>A-{0000}</displayFormat>
        <label>auto</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>demo__c</fullName>
        <description>r</description>
        <displayFormat>A-{0000}</displayFormat>
        <inlineHelpText>t</inlineHelpText>
        <label>demo</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>email__c</fullName>
        <description>email field</description>
        <inlineHelpText>enter the email here</inlineHelpText>
        <label>email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>formula__c</fullName>
        <formula>&quot;formula&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>formula</label>
        <type>Text</type>
    </fields>
    <label>ERD</label>
    <nameField>
        <label>ERD Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ERDs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>